fix(PricePage): Reduce padding-bottom for main title on mobile

--- a/src/components/PricePageComponents/MainPricePage/MainPricePage.css
+++ b/src/components/PricePageComponents/MainPricePage/MainPricePage.css
@@ -47,6 +47,7 @@
 .price-page-description {
   padding-bottom: 24px;
   font-size: 16px;
+  width: 270px;
 }
 
 
@@ -75,4 +76,6 @@
         flex-direction: column;
         padding: 10px;
     }
+
+    
 }
