--- a/src/components/PricePageComponents/TitlePricePage/TitlePricePage.css
+++ b/src/components/PricePageComponents/TitlePricePage/TitlePricePage.css
@@ -16,3 +16,12 @@
     text-align: center;
     padding-bottom: 40px;
 }
+
+
+@media (max-width: 670px) {
+    .main-title-price-page {
+        padding: 20px;
+    }
+
+    
+}
